force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Keeps records of the Projects of the company</description>
    <label>Project</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>