force-app/main/default/objects/Project__c/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <label>Project Title</label>
    <type>TextArea</type>
</CustomField>